<resources>
    <string name="app_name">FirstApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Register Form</string>
    <string name="full_name">Full Name...</string>
    <string name="email">Example: name@email.com</string>
    <string name="password">Password...</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Full Name...</string>
    <string name="message">Register in our App!</string>
</resources>